cmake_minimum_required(VERSION 3.5)

project(tele_rest)

set(CMAKE_AUTOMOC ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Network Gui)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Network Gui)

include(GNUInstallDirs)
include(CMakePackageConfigHelpers)

add_library(${PROJECT_NAME}
  OAIAcceptedGiftTypes.h
  OAIAddStickerToSetRequest.h
  OAIAddStickerToSetResponse.h
  OAIAffiliateInfo.h
  OAIAnimation.h
  OAIAnswerCallbackQueryRequest.h
  OAIAnswerCallbackQueryResponse.h
  OAIAnswerInlineQueryRequest.h
  OAIAnswerInlineQueryResponse.h
  OAIAnswerPreCheckoutQueryRequest.h
  OAIAnswerPreCheckoutQueryResponse.h
  OAIAnswerShippingQueryRequest.h
  OAIAnswerShippingQueryResponse.h
  OAIAnswerWebAppQueryRequest.h
  OAIAnswerWebAppQueryResponse.h
  OAIApproveChatJoinRequestRequest.h
  OAIApproveChatJoinRequestResponse.h
  OAIAudio.h
  OAIBackgroundFill.h
  OAIBackgroundFillFreeformGradient.h
  OAIBackgroundFillGradient.h
  OAIBackgroundFillSolid.h
  OAIBackgroundType.h
  OAIBackgroundTypeChatTheme.h
  OAIBackgroundTypeFill.h
  OAIBackgroundTypePattern.h
  OAIBackgroundTypeWallpaper.h
  OAIBanChatMemberRequest.h
  OAIBanChatMemberRequest_chat_id.h
  OAIBanChatMemberResponse.h
  OAIBanChatSenderChatRequest.h
  OAIBanChatSenderChatResponse.h
  OAIBirthdate.h
  OAIBotCommand.h
  OAIBotCommandScope.h
  OAIBotCommandScopeAllChatAdministrators.h
  OAIBotCommandScopeAllGroupChats.h
  OAIBotCommandScopeAllPrivateChats.h
  OAIBotCommandScopeChat.h
  OAIBotCommandScopeChatAdministrators.h
  OAIBotCommandScopeChatMember.h
  OAIBotCommandScopeChat_chat_id.h
  OAIBotCommandScopeDefault.h
  OAIBotDescription.h
  OAIBotName.h
  OAIBotShortDescription.h
  OAIBusinessBotRights.h
  OAIBusinessConnection.h
  OAIBusinessIntro.h
  OAIBusinessLocation.h
  OAIBusinessMessagesDeleted.h
  OAIBusinessOpeningHours.h
  OAIBusinessOpeningHoursInterval.h
  OAICallbackQuery.h
  OAIChat.h
  OAIChatAdministratorRights.h
  OAIChatBackground.h
  OAIChatBoost.h
  OAIChatBoostAdded.h
  OAIChatBoostRemoved.h
  OAIChatBoostSource.h
  OAIChatBoostSourceGiftCode.h
  OAIChatBoostSourceGiveaway.h
  OAIChatBoostSourcePremium.h
  OAIChatBoostUpdated.h
  OAIChatFullInfo.h
  OAIChatInviteLink.h
  OAIChatJoinRequest.h
  OAIChatLocation.h
  OAIChatMember.h
  OAIChatMemberAdministrator.h
  OAIChatMemberBanned.h
  OAIChatMemberLeft.h
  OAIChatMemberMember.h
  OAIChatMemberOwner.h
  OAIChatMemberRestricted.h
  OAIChatMemberUpdated.h
  OAIChatPermissions.h
  OAIChatPhoto.h
  OAIChatShared.h
  OAIChosenInlineResult.h
  OAICloseForumTopicRequest.h
  OAICloseForumTopicResponse.h
  OAICloseGeneralForumTopicRequest.h
  OAICloseGeneralForumTopicResponse.h
  OAICloseResponse.h
  OAIContact.h
  OAIConvertGiftToStarsRequest.h
  OAIConvertGiftToStarsResponse.h
  OAICopyMessageRequest.h
  OAICopyMessageResponse.h
  OAICopyMessagesRequest.h
  OAICopyMessagesResponse.h
  OAICopyTextButton.h
  OAICreateChatInviteLinkRequest.h
  OAICreateChatInviteLinkResponse.h
  OAICreateChatSubscriptionInviteLinkRequest.h
  OAICreateChatSubscriptionInviteLinkRequest_chat_id.h
  OAICreateChatSubscriptionInviteLinkResponse.h
  OAICreateForumTopicRequest.h
  OAICreateForumTopicResponse.h
  OAICreateInvoiceLinkRequest.h
  OAICreateInvoiceLinkResponse.h
  OAICreateNewStickerSetRequest.h
  OAICreateNewStickerSetResponse.h
  OAIDeclineChatJoinRequestRequest.h
  OAIDeclineChatJoinRequestResponse.h
  OAIDeleteBusinessMessagesRequest.h
  OAIDeleteBusinessMessagesResponse.h
  OAIDeleteChatPhotoRequest.h
  OAIDeleteChatPhotoResponse.h
  OAIDeleteChatStickerSetRequest.h
  OAIDeleteChatStickerSetResponse.h
  OAIDeleteForumTopicRequest.h
  OAIDeleteForumTopicResponse.h
  OAIDeleteMessageRequest.h
  OAIDeleteMessageResponse.h
  OAIDeleteMessagesRequest.h
  OAIDeleteMessagesResponse.h
  OAIDeleteMyCommandsRequest.h
  OAIDeleteMyCommandsResponse.h
  OAIDeleteStickerFromSetRequest.h
  OAIDeleteStickerFromSetResponse.h
  OAIDeleteStickerSetRequest.h
  OAIDeleteStickerSetResponse.h
  OAIDeleteStoryRequest.h
  OAIDeleteStoryResponse.h
  OAIDeleteWebhookRequest.h
  OAIDeleteWebhookResponse.h
  OAIDice.h
  OAIDocument.h
  OAIEditChatInviteLinkRequest.h
  OAIEditChatInviteLinkResponse.h
  OAIEditChatSubscriptionInviteLinkRequest.h
  OAIEditChatSubscriptionInviteLinkResponse.h
  OAIEditForumTopicRequest.h
  OAIEditForumTopicResponse.h
  OAIEditGeneralForumTopicRequest.h
  OAIEditGeneralForumTopicResponse.h
  OAIEditMessageCaptionRequest.h
  OAIEditMessageCaptionResponse.h
  OAIEditMessageLiveLocationRequest.h
  OAIEditMessageLiveLocationResponse.h
  OAIEditMessageMediaRequest.h
  OAIEditMessageMediaResponse.h
  OAIEditMessageReplyMarkupRequest.h
  OAIEditMessageReplyMarkupResponse.h
  OAIEditMessageTextRequest.h
  OAIEditMessageTextRequest_chat_id.h
  OAIEditMessageTextResponse.h
  OAIEditMessageTextResponse_result.h
  OAIEditStoryRequest.h
  OAIEditStoryResponse.h
  OAIEditUserStarSubscriptionRequest.h
  OAIEditUserStarSubscriptionResponse.h
  OAIEncryptedCredentials.h
  OAIEncryptedPassportElement.h
  OAIError.h
  OAIExportChatInviteLinkRequest.h
  OAIExportChatInviteLinkResponse.h
  OAIExternalReplyInfo.h
  OAIFile.h
  OAIForceReply.h
  OAIForumTopic.h
  OAIForumTopicCreated.h
  OAIForumTopicEdited.h
  OAIForwardMessageRequest.h
  OAIForwardMessageRequest_from_chat_id.h
  OAIForwardMessageResponse.h
  OAIForwardMessagesRequest.h
  OAIForwardMessagesRequest_from_chat_id.h
  OAIForwardMessagesResponse.h
  OAIGame.h
  OAIGameHighScore.h
  OAIGetAvailableGiftsResponse.h
  OAIGetBusinessAccountGiftsRequest.h
  OAIGetBusinessAccountGiftsResponse.h
  OAIGetBusinessAccountStarBalanceRequest.h
  OAIGetBusinessAccountStarBalanceResponse.h
  OAIGetBusinessConnectionRequest.h
  OAIGetBusinessConnectionResponse.h
  OAIGetChatAdministratorsRequest.h
  OAIGetChatAdministratorsResponse.h
  OAIGetChatMemberCountRequest.h
  OAIGetChatMemberCountResponse.h
  OAIGetChatMemberRequest.h
  OAIGetChatMemberResponse.h
  OAIGetChatMenuButtonRequest.h
  OAIGetChatMenuButtonResponse.h
  OAIGetChatRequest.h
  OAIGetChatResponse.h
  OAIGetCustomEmojiStickersRequest.h
  OAIGetCustomEmojiStickersResponse.h
  OAIGetFileRequest.h
  OAIGetFileResponse.h
  OAIGetForumTopicIconStickersResponse.h
  OAIGetGameHighScoresRequest.h
  OAIGetGameHighScoresResponse.h
  OAIGetMeResponse.h
  OAIGetMyCommandsRequest.h
  OAIGetMyCommandsResponse.h
  OAIGetMyDefaultAdministratorRightsRequest.h
  OAIGetMyDefaultAdministratorRightsResponse.h
  OAIGetMyDescriptionRequest.h
  OAIGetMyDescriptionResponse.h
  OAIGetMyNameRequest.h
  OAIGetMyNameResponse.h
  OAIGetMyShortDescriptionRequest.h
  OAIGetMyShortDescriptionResponse.h
  OAIGetStarTransactionsRequest.h
  OAIGetStarTransactionsResponse.h
  OAIGetStickerSetRequest.h
  OAIGetStickerSetResponse.h
  OAIGetUpdatesRequest.h
  OAIGetUpdatesResponse.h
  OAIGetUserChatBoostsRequest.h
  OAIGetUserChatBoostsRequest_chat_id.h
  OAIGetUserChatBoostsResponse.h
  OAIGetUserProfilePhotosRequest.h
  OAIGetUserProfilePhotosResponse.h
  OAIGetWebhookInfoResponse.h
  OAIGift.h
  OAIGiftInfo.h
  OAIGiftPremiumSubscriptionRequest.h
  OAIGiftPremiumSubscriptionResponse.h
  OAIGifts.h
  OAIGiveaway.h
  OAIGiveawayCompleted.h
  OAIGiveawayCreated.h
  OAIGiveawayWinners.h
  OAIHideGeneralForumTopicRequest.h
  OAIHideGeneralForumTopicResponse.h
  OAIInaccessibleMessage.h
  OAIInlineKeyboardButton.h
  OAIInlineKeyboardMarkup.h
  OAIInlineQuery.h
  OAIInlineQueryResult.h
  OAIInlineQueryResultArticle.h
  OAIInlineQueryResultAudio.h
  OAIInlineQueryResultCachedAudio.h
  OAIInlineQueryResultCachedDocument.h
  OAIInlineQueryResultCachedGif.h
  OAIInlineQueryResultCachedMpeg4Gif.h
  OAIInlineQueryResultCachedPhoto.h
  OAIInlineQueryResultCachedSticker.h
  OAIInlineQueryResultCachedVideo.h
  OAIInlineQueryResultCachedVoice.h
  OAIInlineQueryResultContact.h
  OAIInlineQueryResultDocument.h
  OAIInlineQueryResultGame.h
  OAIInlineQueryResultGif.h
  OAIInlineQueryResultLocation.h
  OAIInlineQueryResultMpeg4Gif.h
  OAIInlineQueryResultPhoto.h
  OAIInlineQueryResultVenue.h
  OAIInlineQueryResultVideo.h
  OAIInlineQueryResultVoice.h
  OAIInlineQueryResultsButton.h
  OAIInputContactMessageContent.h
  OAIInputInvoiceMessageContent.h
  OAIInputLocationMessageContent.h
  OAIInputMedia.h
  OAIInputMediaAnimation.h
  OAIInputMediaAudio.h
  OAIInputMediaDocument.h
  OAIInputMediaPhoto.h
  OAIInputMediaVideo.h
  OAIInputMessageContent.h
  OAIInputPaidMedia.h
  OAIInputPaidMediaPhoto.h
  OAIInputPaidMediaVideo.h
  OAIInputPollOption.h
  OAIInputProfilePhoto.h
  OAIInputProfilePhotoAnimated.h
  OAIInputProfilePhotoStatic.h
  OAIInputSticker.h
  OAIInputStoryContent.h
  OAIInputStoryContentPhoto.h
  OAIInputStoryContentVideo.h
  OAIInputTextMessageContent.h
  OAIInputVenueMessageContent.h
  OAIInvoice.h
  OAIKeyboardButton.h
  OAIKeyboardButtonPollType.h
  OAIKeyboardButtonRequestChat.h
  OAIKeyboardButtonRequestUsers.h
  OAILabeledPrice.h
  OAILeaveChatRequest.h
  OAILeaveChatRequest_chat_id.h
  OAILeaveChatResponse.h
  OAILinkPreviewOptions.h
  OAILocation.h
  OAILocationAddress.h
  OAILogOutResponse.h
  OAILoginUrl.h
  OAIMaskPosition.h
  OAIMaybeInaccessibleMessage.h
  OAIMenuButton.h
  OAIMenuButtonCommands.h
  OAIMenuButtonDefault.h
  OAIMenuButtonWebApp.h
  OAIMessage.h
  OAIMessageAutoDeleteTimerChanged.h
  OAIMessageEntity.h
  OAIMessageId.h
  OAIMessageOrigin.h
  OAIMessageOriginChannel.h
  OAIMessageOriginChat.h
  OAIMessageOriginHiddenUser.h
  OAIMessageOriginUser.h
  OAIMessageReactionCountUpdated.h
  OAIMessageReactionUpdated.h
  OAIOrderInfo.h
  OAIOwnedGift.h
  OAIOwnedGiftRegular.h
  OAIOwnedGiftUnique.h
  OAIOwnedGifts.h
  OAIPaidMedia.h
  OAIPaidMediaInfo.h
  OAIPaidMediaPhoto.h
  OAIPaidMediaPreview.h
  OAIPaidMediaPurchased.h
  OAIPaidMediaVideo.h
  OAIPaidMessagePriceChanged.h
  OAIPassportData.h
  OAIPassportElementError.h
  OAIPassportElementErrorDataField.h
  OAIPassportElementErrorFile.h
  OAIPassportElementErrorFiles.h
  OAIPassportElementErrorFrontSide.h
  OAIPassportElementErrorReverseSide.h
  OAIPassportElementErrorSelfie.h
  OAIPassportElementErrorTranslationFile.h
  OAIPassportElementErrorTranslationFiles.h
  OAIPassportElementErrorUnspecified.h
  OAIPassportFile.h
  OAIPhotoSize.h
  OAIPinChatMessageRequest.h
  OAIPinChatMessageResponse.h
  OAIPoll.h
  OAIPollAnswer.h
  OAIPollOption.h
  OAIPostStoryRequest.h
  OAIPostStoryResponse.h
  OAIPreCheckoutQuery.h
  OAIPreparedInlineMessage.h
  OAIPromoteChatMemberRequest.h
  OAIPromoteChatMemberResponse.h
  OAIProximityAlertTriggered.h
  OAIReactionCount.h
  OAIReactionType.h
  OAIReactionTypeCustomEmoji.h
  OAIReactionTypeEmoji.h
  OAIReactionTypePaid.h
  OAIReadBusinessMessageRequest.h
  OAIReadBusinessMessageResponse.h
  OAIRefundStarPaymentRequest.h
  OAIRefundStarPaymentResponse.h
  OAIRefundedPayment.h
  OAIRemoveBusinessAccountProfilePhotoRequest.h
  OAIRemoveBusinessAccountProfilePhotoResponse.h
  OAIRemoveChatVerificationRequest.h
  OAIRemoveChatVerificationResponse.h
  OAIRemoveUserVerificationRequest.h
  OAIRemoveUserVerificationResponse.h
  OAIReopenForumTopicRequest.h
  OAIReopenForumTopicResponse.h
  OAIReopenGeneralForumTopicRequest.h
  OAIReopenGeneralForumTopicResponse.h
  OAIReplaceStickerInSetRequest.h
  OAIReplaceStickerInSetResponse.h
  OAIReplyKeyboardMarkup.h
  OAIReplyKeyboardRemove.h
  OAIReplyParameters.h
  OAIReplyParameters_chat_id.h
  OAIResponseParameters.h
  OAIRestrictChatMemberRequest.h
  OAIRestrictChatMemberResponse.h
  OAIRevenueWithdrawalState.h
  OAIRevenueWithdrawalStateFailed.h
  OAIRevenueWithdrawalStatePending.h
  OAIRevenueWithdrawalStateSucceeded.h
  OAIRevokeChatInviteLinkRequest.h
  OAIRevokeChatInviteLinkRequest_chat_id.h
  OAIRevokeChatInviteLinkResponse.h
  OAISavePreparedInlineMessageRequest.h
  OAISavePreparedInlineMessageResponse.h
  OAISendAnimationRequest.h
  OAISendAnimationResponse.h
  OAISendAudioRequest.h
  OAISendAudioResponse.h
  OAISendChatActionRequest.h
  OAISendChatActionResponse.h
  OAISendContactRequest.h
  OAISendContactResponse.h
  OAISendDiceRequest.h
  OAISendDiceResponse.h
  OAISendDocumentRequest.h
  OAISendDocumentResponse.h
  OAISendGameRequest.h
  OAISendGameResponse.h
  OAISendGiftRequest.h
  OAISendGiftRequest_chat_id.h
  OAISendGiftResponse.h
  OAISendInvoiceRequest.h
  OAISendInvoiceResponse.h
  OAISendLocationRequest.h
  OAISendLocationResponse.h
  OAISendMediaGroupRequest.h
  OAISendMediaGroupRequest_media_inner.h
  OAISendMediaGroupResponse.h
  OAISendMessageRequest.h
  OAISendMessageRequest_chat_id.h
  OAISendMessageRequest_reply_markup.h
  OAISendMessageResponse.h
  OAISendPaidMediaRequest.h
  OAISendPaidMediaRequest_chat_id.h
  OAISendPaidMediaResponse.h
  OAISendPhotoRequest.h
  OAISendPhotoResponse.h
  OAISendPollRequest.h
  OAISendPollResponse.h
  OAISendStickerRequest.h
  OAISendStickerResponse.h
  OAISendVenueRequest.h
  OAISendVenueResponse.h
  OAISendVideoNoteRequest.h
  OAISendVideoNoteResponse.h
  OAISendVideoRequest.h
  OAISendVideoResponse.h
  OAISendVoiceRequest.h
  OAISendVoiceResponse.h
  OAISentWebAppMessage.h
  OAISetBusinessAccountBioRequest.h
  OAISetBusinessAccountBioResponse.h
  OAISetBusinessAccountGiftSettingsRequest.h
  OAISetBusinessAccountGiftSettingsResponse.h
  OAISetBusinessAccountNameRequest.h
  OAISetBusinessAccountNameResponse.h
  OAISetBusinessAccountProfilePhotoRequest.h
  OAISetBusinessAccountProfilePhotoResponse.h
  OAISetBusinessAccountUsernameRequest.h
  OAISetBusinessAccountUsernameResponse.h
  OAISetChatAdministratorCustomTitleRequest.h
  OAISetChatAdministratorCustomTitleResponse.h
  OAISetChatDescriptionRequest.h
  OAISetChatDescriptionResponse.h
  OAISetChatMenuButtonRequest.h
  OAISetChatMenuButtonResponse.h
  OAISetChatPermissionsRequest.h
  OAISetChatPermissionsResponse.h
  OAISetChatPhotoRequest.h
  OAISetChatPhotoResponse.h
  OAISetChatStickerSetRequest.h
  OAISetChatStickerSetResponse.h
  OAISetChatTitleRequest.h
  OAISetChatTitleResponse.h
  OAISetCustomEmojiStickerSetThumbnailRequest.h
  OAISetCustomEmojiStickerSetThumbnailResponse.h
  OAISetGameScoreRequest.h
  OAISetGameScoreResponse.h
  OAISetMessageReactionRequest.h
  OAISetMessageReactionResponse.h
  OAISetMyCommandsRequest.h
  OAISetMyCommandsResponse.h
  OAISetMyDefaultAdministratorRightsRequest.h
  OAISetMyDefaultAdministratorRightsResponse.h
  OAISetMyDescriptionRequest.h
  OAISetMyDescriptionResponse.h
  OAISetMyNameRequest.h
  OAISetMyNameResponse.h
  OAISetMyShortDescriptionRequest.h
  OAISetMyShortDescriptionResponse.h
  OAISetPassportDataErrorsRequest.h
  OAISetPassportDataErrorsResponse.h
  OAISetStickerEmojiListRequest.h
  OAISetStickerEmojiListResponse.h
  OAISetStickerKeywordsRequest.h
  OAISetStickerKeywordsResponse.h
  OAISetStickerMaskPositionRequest.h
  OAISetStickerMaskPositionResponse.h
  OAISetStickerPositionInSetRequest.h
  OAISetStickerPositionInSetResponse.h
  OAISetStickerSetThumbnailRequest.h
  OAISetStickerSetThumbnailResponse.h
  OAISetStickerSetTitleRequest.h
  OAISetStickerSetTitleResponse.h
  OAISetUserEmojiStatusRequest.h
  OAISetUserEmojiStatusResponse.h
  OAISetWebhookRequest.h
  OAISetWebhookResponse.h
  OAISharedUser.h
  OAIShippingAddress.h
  OAIShippingOption.h
  OAIShippingQuery.h
  OAIStarAmount.h
  OAIStarTransaction.h
  OAIStarTransactions.h
  OAISticker.h
  OAIStickerSet.h
  OAIStopMessageLiveLocationRequest.h
  OAIStopMessageLiveLocationResponse.h
  OAIStopPollRequest.h
  OAIStopPollResponse.h
  OAIStory.h
  OAIStoryArea.h
  OAIStoryAreaPosition.h
  OAIStoryAreaType.h
  OAIStoryAreaTypeLink.h
  OAIStoryAreaTypeLocation.h
  OAIStoryAreaTypeSuggestedReaction.h
  OAIStoryAreaTypeUniqueGift.h
  OAIStoryAreaTypeWeather.h
  OAISuccessfulPayment.h
  OAISwitchInlineQueryChosenChat.h
  OAITextQuote.h
  OAITransactionPartner.h
  OAITransactionPartnerAffiliateProgram.h
  OAITransactionPartnerChat.h
  OAITransactionPartnerFragment.h
  OAITransactionPartnerOther.h
  OAITransactionPartnerTelegramAds.h
  OAITransactionPartnerTelegramApi.h
  OAITransactionPartnerUser.h
  OAITransferBusinessAccountStarsRequest.h
  OAITransferBusinessAccountStarsResponse.h
  OAITransferGiftRequest.h
  OAITransferGiftResponse.h
  OAIUnbanChatMemberRequest.h
  OAIUnbanChatMemberResponse.h
  OAIUnbanChatSenderChatRequest.h
  OAIUnbanChatSenderChatResponse.h
  OAIUnhideGeneralForumTopicRequest.h
  OAIUnhideGeneralForumTopicResponse.h
  OAIUniqueGift.h
  OAIUniqueGiftBackdrop.h
  OAIUniqueGiftBackdropColors.h
  OAIUniqueGiftInfo.h
  OAIUniqueGiftModel.h
  OAIUniqueGiftSymbol.h
  OAIUnpinAllChatMessagesRequest.h
  OAIUnpinAllChatMessagesResponse.h
  OAIUnpinAllForumTopicMessagesRequest.h
  OAIUnpinAllForumTopicMessagesResponse.h
  OAIUnpinAllGeneralForumTopicMessagesRequest.h
  OAIUnpinAllGeneralForumTopicMessagesResponse.h
  OAIUnpinChatMessageRequest.h
  OAIUnpinChatMessageResponse.h
  OAIUpdate.h
  OAIUpgradeGiftRequest.h
  OAIUpgradeGiftResponse.h
  OAIUploadStickerFileRequest.h
  OAIUploadStickerFileResponse.h
  OAIUser.h
  OAIUserChatBoosts.h
  OAIUserProfilePhotos.h
  OAIUsersShared.h
  OAIVenue.h
  OAIVerifyChatRequest.h
  OAIVerifyChatResponse.h
  OAIVerifyUserRequest.h
  OAIVerifyUserResponse.h
  OAIVideo.h
  OAIVideoChatEnded.h
  OAIVideoChatParticipantsInvited.h
  OAIVideoChatScheduled.h
  OAIVideoNote.h
  OAIVoice.h
  OAIWebAppData.h
  OAIWebAppInfo.h
  OAIWebhookInfo.h
  OAIWriteAccessAllowed.h
  OAIDefaultApi.h
  OAIHelpers.h
  OAIHttpRequest.h
  OAIObject.h
  OAIEnum.h
  OAIHttpFileElement.h
  OAIServerConfiguration.h
  OAIServerVariable.h
  OAIOauth.h
  OAIAcceptedGiftTypes.cpp
  OAIAddStickerToSetRequest.cpp
  OAIAddStickerToSetResponse.cpp
  OAIAffiliateInfo.cpp
  OAIAnimation.cpp
  OAIAnswerCallbackQueryRequest.cpp
  OAIAnswerCallbackQueryResponse.cpp
  OAIAnswerInlineQueryRequest.cpp
  OAIAnswerInlineQueryResponse.cpp
  OAIAnswerPreCheckoutQueryRequest.cpp
  OAIAnswerPreCheckoutQueryResponse.cpp
  OAIAnswerShippingQueryRequest.cpp
  OAIAnswerShippingQueryResponse.cpp
  OAIAnswerWebAppQueryRequest.cpp
  OAIAnswerWebAppQueryResponse.cpp
  OAIApproveChatJoinRequestRequest.cpp
  OAIApproveChatJoinRequestResponse.cpp
  OAIAudio.cpp
  OAIBackgroundFill.cpp
  OAIBackgroundFillFreeformGradient.cpp
  OAIBackgroundFillGradient.cpp
  OAIBackgroundFillSolid.cpp
  OAIBackgroundType.cpp
  OAIBackgroundTypeChatTheme.cpp
  OAIBackgroundTypeFill.cpp
  OAIBackgroundTypePattern.cpp
  OAIBackgroundTypeWallpaper.cpp
  OAIBanChatMemberRequest.cpp
  OAIBanChatMemberRequest_chat_id.cpp
  OAIBanChatMemberResponse.cpp
  OAIBanChatSenderChatRequest.cpp
  OAIBanChatSenderChatResponse.cpp
  OAIBirthdate.cpp
  OAIBotCommand.cpp
  OAIBotCommandScope.cpp
  OAIBotCommandScopeAllChatAdministrators.cpp
  OAIBotCommandScopeAllGroupChats.cpp
  OAIBotCommandScopeAllPrivateChats.cpp
  OAIBotCommandScopeChat.cpp
  OAIBotCommandScopeChatAdministrators.cpp
  OAIBotCommandScopeChatMember.cpp
  OAIBotCommandScopeChat_chat_id.cpp
  OAIBotCommandScopeDefault.cpp
  OAIBotDescription.cpp
  OAIBotName.cpp
  OAIBotShortDescription.cpp
  OAIBusinessBotRights.cpp
  OAIBusinessConnection.cpp
  OAIBusinessIntro.cpp
  OAIBusinessLocation.cpp
  OAIBusinessMessagesDeleted.cpp
  OAIBusinessOpeningHours.cpp
  OAIBusinessOpeningHoursInterval.cpp
  OAICallbackQuery.cpp
  OAIChat.cpp
  OAIChatAdministratorRights.cpp
  OAIChatBackground.cpp
  OAIChatBoost.cpp
  OAIChatBoostAdded.cpp
  OAIChatBoostRemoved.cpp
  OAIChatBoostSource.cpp
  OAIChatBoostSourceGiftCode.cpp
  OAIChatBoostSourceGiveaway.cpp
  OAIChatBoostSourcePremium.cpp
  OAIChatBoostUpdated.cpp
  OAIChatFullInfo.cpp
  OAIChatInviteLink.cpp
  OAIChatJoinRequest.cpp
  OAIChatLocation.cpp
  OAIChatMember.cpp
  OAIChatMemberAdministrator.cpp
  OAIChatMemberBanned.cpp
  OAIChatMemberLeft.cpp
  OAIChatMemberMember.cpp
  OAIChatMemberOwner.cpp
  OAIChatMemberRestricted.cpp
  OAIChatMemberUpdated.cpp
  OAIChatPermissions.cpp
  OAIChatPhoto.cpp
  OAIChatShared.cpp
  OAIChosenInlineResult.cpp
  OAICloseForumTopicRequest.cpp
  OAICloseForumTopicResponse.cpp
  OAICloseGeneralForumTopicRequest.cpp
  OAICloseGeneralForumTopicResponse.cpp
  OAICloseResponse.cpp
  OAIContact.cpp
  OAIConvertGiftToStarsRequest.cpp
  OAIConvertGiftToStarsResponse.cpp
  OAICopyMessageRequest.cpp
  OAICopyMessageResponse.cpp
  OAICopyMessagesRequest.cpp
  OAICopyMessagesResponse.cpp
  OAICopyTextButton.cpp
  OAICreateChatInviteLinkRequest.cpp
  OAICreateChatInviteLinkResponse.cpp
  OAICreateChatSubscriptionInviteLinkRequest.cpp
  OAICreateChatSubscriptionInviteLinkRequest_chat_id.cpp
  OAICreateChatSubscriptionInviteLinkResponse.cpp
  OAICreateForumTopicRequest.cpp
  OAICreateForumTopicResponse.cpp
  OAICreateInvoiceLinkRequest.cpp
  OAICreateInvoiceLinkResponse.cpp
  OAICreateNewStickerSetRequest.cpp
  OAICreateNewStickerSetResponse.cpp
  OAIDeclineChatJoinRequestRequest.cpp
  OAIDeclineChatJoinRequestResponse.cpp
  OAIDeleteBusinessMessagesRequest.cpp
  OAIDeleteBusinessMessagesResponse.cpp
  OAIDeleteChatPhotoRequest.cpp
  OAIDeleteChatPhotoResponse.cpp
  OAIDeleteChatStickerSetRequest.cpp
  OAIDeleteChatStickerSetResponse.cpp
  OAIDeleteForumTopicRequest.cpp
  OAIDeleteForumTopicResponse.cpp
  OAIDeleteMessageRequest.cpp
  OAIDeleteMessageResponse.cpp
  OAIDeleteMessagesRequest.cpp
  OAIDeleteMessagesResponse.cpp
  OAIDeleteMyCommandsRequest.cpp
  OAIDeleteMyCommandsResponse.cpp
  OAIDeleteStickerFromSetRequest.cpp
  OAIDeleteStickerFromSetResponse.cpp
  OAIDeleteStickerSetRequest.cpp
  OAIDeleteStickerSetResponse.cpp
  OAIDeleteStoryRequest.cpp
  OAIDeleteStoryResponse.cpp
  OAIDeleteWebhookRequest.cpp
  OAIDeleteWebhookResponse.cpp
  OAIDice.cpp
  OAIDocument.cpp
  OAIEditChatInviteLinkRequest.cpp
  OAIEditChatInviteLinkResponse.cpp
  OAIEditChatSubscriptionInviteLinkRequest.cpp
  OAIEditChatSubscriptionInviteLinkResponse.cpp
  OAIEditForumTopicRequest.cpp
  OAIEditForumTopicResponse.cpp
  OAIEditGeneralForumTopicRequest.cpp
  OAIEditGeneralForumTopicResponse.cpp
  OAIEditMessageCaptionRequest.cpp
  OAIEditMessageCaptionResponse.cpp
  OAIEditMessageLiveLocationRequest.cpp
  OAIEditMessageLiveLocationResponse.cpp
  OAIEditMessageMediaRequest.cpp
  OAIEditMessageMediaResponse.cpp
  OAIEditMessageReplyMarkupRequest.cpp
  OAIEditMessageReplyMarkupResponse.cpp
  OAIEditMessageTextRequest.cpp
  OAIEditMessageTextRequest_chat_id.cpp
  OAIEditMessageTextResponse.cpp
  OAIEditMessageTextResponse_result.cpp
  OAIEditStoryRequest.cpp
  OAIEditStoryResponse.cpp
  OAIEditUserStarSubscriptionRequest.cpp
  OAIEditUserStarSubscriptionResponse.cpp
  OAIEncryptedCredentials.cpp
  OAIEncryptedPassportElement.cpp
  OAIError.cpp
  OAIExportChatInviteLinkRequest.cpp
  OAIExportChatInviteLinkResponse.cpp
  OAIExternalReplyInfo.cpp
  OAIFile.cpp
  OAIForceReply.cpp
  OAIForumTopic.cpp
  OAIForumTopicCreated.cpp
  OAIForumTopicEdited.cpp
  OAIForwardMessageRequest.cpp
  OAIForwardMessageRequest_from_chat_id.cpp
  OAIForwardMessageResponse.cpp
  OAIForwardMessagesRequest.cpp
  OAIForwardMessagesRequest_from_chat_id.cpp
  OAIForwardMessagesResponse.cpp
  OAIGame.cpp
  OAIGameHighScore.cpp
  OAIGetAvailableGiftsResponse.cpp
  OAIGetBusinessAccountGiftsRequest.cpp
  OAIGetBusinessAccountGiftsResponse.cpp
  OAIGetBusinessAccountStarBalanceRequest.cpp
  OAIGetBusinessAccountStarBalanceResponse.cpp
  OAIGetBusinessConnectionRequest.cpp
  OAIGetBusinessConnectionResponse.cpp
  OAIGetChatAdministratorsRequest.cpp
  OAIGetChatAdministratorsResponse.cpp
  OAIGetChatMemberCountRequest.cpp
  OAIGetChatMemberCountResponse.cpp
  OAIGetChatMemberRequest.cpp
  OAIGetChatMemberResponse.cpp
  OAIGetChatMenuButtonRequest.cpp
  OAIGetChatMenuButtonResponse.cpp
  OAIGetChatRequest.cpp
  OAIGetChatResponse.cpp
  OAIGetCustomEmojiStickersRequest.cpp
  OAIGetCustomEmojiStickersResponse.cpp
  OAIGetFileRequest.cpp
  OAIGetFileResponse.cpp
  OAIGetForumTopicIconStickersResponse.cpp
  OAIGetGameHighScoresRequest.cpp
  OAIGetGameHighScoresResponse.cpp
  OAIGetMeResponse.cpp
  OAIGetMyCommandsRequest.cpp
  OAIGetMyCommandsResponse.cpp
  OAIGetMyDefaultAdministratorRightsRequest.cpp
  OAIGetMyDefaultAdministratorRightsResponse.cpp
  OAIGetMyDescriptionRequest.cpp
  OAIGetMyDescriptionResponse.cpp
  OAIGetMyNameRequest.cpp
  OAIGetMyNameResponse.cpp
  OAIGetMyShortDescriptionRequest.cpp
  OAIGetMyShortDescriptionResponse.cpp
  OAIGetStarTransactionsRequest.cpp
  OAIGetStarTransactionsResponse.cpp
  OAIGetStickerSetRequest.cpp
  OAIGetStickerSetResponse.cpp
  OAIGetUpdatesRequest.cpp
  OAIGetUpdatesResponse.cpp
  OAIGetUserChatBoostsRequest.cpp
  OAIGetUserChatBoostsRequest_chat_id.cpp
  OAIGetUserChatBoostsResponse.cpp
  OAIGetUserProfilePhotosRequest.cpp
  OAIGetUserProfilePhotosResponse.cpp
  OAIGetWebhookInfoResponse.cpp
  OAIGift.cpp
  OAIGiftInfo.cpp
  OAIGiftPremiumSubscriptionRequest.cpp
  OAIGiftPremiumSubscriptionResponse.cpp
  OAIGifts.cpp
  OAIGiveaway.cpp
  OAIGiveawayCompleted.cpp
  OAIGiveawayCreated.cpp
  OAIGiveawayWinners.cpp
  OAIHideGeneralForumTopicRequest.cpp
  OAIHideGeneralForumTopicResponse.cpp
  OAIInaccessibleMessage.cpp
  OAIInlineKeyboardButton.cpp
  OAIInlineKeyboardMarkup.cpp
  OAIInlineQuery.cpp
  OAIInlineQueryResult.cpp
  OAIInlineQueryResultArticle.cpp
  OAIInlineQueryResultAudio.cpp
  OAIInlineQueryResultCachedAudio.cpp
  OAIInlineQueryResultCachedDocument.cpp
  OAIInlineQueryResultCachedGif.cpp
  OAIInlineQueryResultCachedMpeg4Gif.cpp
  OAIInlineQueryResultCachedPhoto.cpp
  OAIInlineQueryResultCachedSticker.cpp
  OAIInlineQueryResultCachedVideo.cpp
  OAIInlineQueryResultCachedVoice.cpp
  OAIInlineQueryResultContact.cpp
  OAIInlineQueryResultDocument.cpp
  OAIInlineQueryResultGame.cpp
  OAIInlineQueryResultGif.cpp
  OAIInlineQueryResultLocation.cpp
  OAIInlineQueryResultMpeg4Gif.cpp
  OAIInlineQueryResultPhoto.cpp
  OAIInlineQueryResultVenue.cpp
  OAIInlineQueryResultVideo.cpp
  OAIInlineQueryResultVoice.cpp
  OAIInlineQueryResultsButton.cpp
  OAIInputContactMessageContent.cpp
  OAIInputInvoiceMessageContent.cpp
  OAIInputLocationMessageContent.cpp
  OAIInputMedia.cpp
  OAIInputMediaAnimation.cpp
  OAIInputMediaAudio.cpp
  OAIInputMediaDocument.cpp
  OAIInputMediaPhoto.cpp
  OAIInputMediaVideo.cpp
  OAIInputMessageContent.cpp
  OAIInputPaidMedia.cpp
  OAIInputPaidMediaPhoto.cpp
  OAIInputPaidMediaVideo.cpp
  OAIInputPollOption.cpp
  OAIInputProfilePhoto.cpp
  OAIInputProfilePhotoAnimated.cpp
  OAIInputProfilePhotoStatic.cpp
  OAIInputSticker.cpp
  OAIInputStoryContent.cpp
  OAIInputStoryContentPhoto.cpp
  OAIInputStoryContentVideo.cpp
  OAIInputTextMessageContent.cpp
  OAIInputVenueMessageContent.cpp
  OAIInvoice.cpp
  OAIKeyboardButton.cpp
  OAIKeyboardButtonPollType.cpp
  OAIKeyboardButtonRequestChat.cpp
  OAIKeyboardButtonRequestUsers.cpp
  OAILabeledPrice.cpp
  OAILeaveChatRequest.cpp
  OAILeaveChatRequest_chat_id.cpp
  OAILeaveChatResponse.cpp
  OAILinkPreviewOptions.cpp
  OAILocation.cpp
  OAILocationAddress.cpp
  OAILogOutResponse.cpp
  OAILoginUrl.cpp
  OAIMaskPosition.cpp
  OAIMaybeInaccessibleMessage.cpp
  OAIMenuButton.cpp
  OAIMenuButtonCommands.cpp
  OAIMenuButtonDefault.cpp
  OAIMenuButtonWebApp.cpp
  OAIMessage.cpp
  OAIMessageAutoDeleteTimerChanged.cpp
  OAIMessageEntity.cpp
  OAIMessageId.cpp
  OAIMessageOrigin.cpp
  OAIMessageOriginChannel.cpp
  OAIMessageOriginChat.cpp
  OAIMessageOriginHiddenUser.cpp
  OAIMessageOriginUser.cpp
  OAIMessageReactionCountUpdated.cpp
  OAIMessageReactionUpdated.cpp
  OAIOrderInfo.cpp
  OAIOwnedGift.cpp
  OAIOwnedGiftRegular.cpp
  OAIOwnedGiftUnique.cpp
  OAIOwnedGifts.cpp
  OAIPaidMedia.cpp
  OAIPaidMediaInfo.cpp
  OAIPaidMediaPhoto.cpp
  OAIPaidMediaPreview.cpp
  OAIPaidMediaPurchased.cpp
  OAIPaidMediaVideo.cpp
  OAIPaidMessagePriceChanged.cpp
  OAIPassportData.cpp
  OAIPassportElementError.cpp
  OAIPassportElementErrorDataField.cpp
  OAIPassportElementErrorFile.cpp
  OAIPassportElementErrorFiles.cpp
  OAIPassportElementErrorFrontSide.cpp
  OAIPassportElementErrorReverseSide.cpp
  OAIPassportElementErrorSelfie.cpp
  OAIPassportElementErrorTranslationFile.cpp
  OAIPassportElementErrorTranslationFiles.cpp
  OAIPassportElementErrorUnspecified.cpp
  OAIPassportFile.cpp
  OAIPhotoSize.cpp
  OAIPinChatMessageRequest.cpp
  OAIPinChatMessageResponse.cpp
  OAIPoll.cpp
  OAIPollAnswer.cpp
  OAIPollOption.cpp
  OAIPostStoryRequest.cpp
  OAIPostStoryResponse.cpp
  OAIPreCheckoutQuery.cpp
  OAIPreparedInlineMessage.cpp
  OAIPromoteChatMemberRequest.cpp
  OAIPromoteChatMemberResponse.cpp
  OAIProximityAlertTriggered.cpp
  OAIReactionCount.cpp
  OAIReactionType.cpp
  OAIReactionTypeCustomEmoji.cpp
  OAIReactionTypeEmoji.cpp
  OAIReactionTypePaid.cpp
  OAIReadBusinessMessageRequest.cpp
  OAIReadBusinessMessageResponse.cpp
  OAIRefundStarPaymentRequest.cpp
  OAIRefundStarPaymentResponse.cpp
  OAIRefundedPayment.cpp
  OAIRemoveBusinessAccountProfilePhotoRequest.cpp
  OAIRemoveBusinessAccountProfilePhotoResponse.cpp
  OAIRemoveChatVerificationRequest.cpp
  OAIRemoveChatVerificationResponse.cpp
  OAIRemoveUserVerificationRequest.cpp
  OAIRemoveUserVerificationResponse.cpp
  OAIReopenForumTopicRequest.cpp
  OAIReopenForumTopicResponse.cpp
  OAIReopenGeneralForumTopicRequest.cpp
  OAIReopenGeneralForumTopicResponse.cpp
  OAIReplaceStickerInSetRequest.cpp
  OAIReplaceStickerInSetResponse.cpp
  OAIReplyKeyboardMarkup.cpp
  OAIReplyKeyboardRemove.cpp
  OAIReplyParameters.cpp
  OAIReplyParameters_chat_id.cpp
  OAIResponseParameters.cpp
  OAIRestrictChatMemberRequest.cpp
  OAIRestrictChatMemberResponse.cpp
  OAIRevenueWithdrawalState.cpp
  OAIRevenueWithdrawalStateFailed.cpp
  OAIRevenueWithdrawalStatePending.cpp
  OAIRevenueWithdrawalStateSucceeded.cpp
  OAIRevokeChatInviteLinkRequest.cpp
  OAIRevokeChatInviteLinkRequest_chat_id.cpp
  OAIRevokeChatInviteLinkResponse.cpp
  OAISavePreparedInlineMessageRequest.cpp
  OAISavePreparedInlineMessageResponse.cpp
  OAISendAnimationRequest.cpp
  OAISendAnimationResponse.cpp
  OAISendAudioRequest.cpp
  OAISendAudioResponse.cpp
  OAISendChatActionRequest.cpp
  OAISendChatActionResponse.cpp
  OAISendContactRequest.cpp
  OAISendContactResponse.cpp
  OAISendDiceRequest.cpp
  OAISendDiceResponse.cpp
  OAISendDocumentRequest.cpp
  OAISendDocumentResponse.cpp
  OAISendGameRequest.cpp
  OAISendGameResponse.cpp
  OAISendGiftRequest.cpp
  OAISendGiftRequest_chat_id.cpp
  OAISendGiftResponse.cpp
  OAISendInvoiceRequest.cpp
  OAISendInvoiceResponse.cpp
  OAISendLocationRequest.cpp
  OAISendLocationResponse.cpp
  OAISendMediaGroupRequest.cpp
  OAISendMediaGroupRequest_media_inner.cpp
  OAISendMediaGroupResponse.cpp
  OAISendMessageRequest.cpp
  OAISendMessageRequest_chat_id.cpp
  OAISendMessageRequest_reply_markup.cpp
  OAISendMessageResponse.cpp
  OAISendPaidMediaRequest.cpp
  OAISendPaidMediaRequest_chat_id.cpp
  OAISendPaidMediaResponse.cpp
  OAISendPhotoRequest.cpp
  OAISendPhotoResponse.cpp
  OAISendPollRequest.cpp
  OAISendPollResponse.cpp
  OAISendStickerRequest.cpp
  OAISendStickerResponse.cpp
  OAISendVenueRequest.cpp
  OAISendVenueResponse.cpp
  OAISendVideoNoteRequest.cpp
  OAISendVideoNoteResponse.cpp
  OAISendVideoRequest.cpp
  OAISendVideoResponse.cpp
  OAISendVoiceRequest.cpp
  OAISendVoiceResponse.cpp
  OAISentWebAppMessage.cpp
  OAISetBusinessAccountBioRequest.cpp
  OAISetBusinessAccountBioResponse.cpp
  OAISetBusinessAccountGiftSettingsRequest.cpp
  OAISetBusinessAccountGiftSettingsResponse.cpp
  OAISetBusinessAccountNameRequest.cpp
  OAISetBusinessAccountNameResponse.cpp
  OAISetBusinessAccountProfilePhotoRequest.cpp
  OAISetBusinessAccountProfilePhotoResponse.cpp
  OAISetBusinessAccountUsernameRequest.cpp
  OAISetBusinessAccountUsernameResponse.cpp
  OAISetChatAdministratorCustomTitleRequest.cpp
  OAISetChatAdministratorCustomTitleResponse.cpp
  OAISetChatDescriptionRequest.cpp
  OAISetChatDescriptionResponse.cpp
  OAISetChatMenuButtonRequest.cpp
  OAISetChatMenuButtonResponse.cpp
  OAISetChatPermissionsRequest.cpp
  OAISetChatPermissionsResponse.cpp
  OAISetChatPhotoRequest.cpp
  OAISetChatPhotoResponse.cpp
  OAISetChatStickerSetRequest.cpp
  OAISetChatStickerSetResponse.cpp
  OAISetChatTitleRequest.cpp
  OAISetChatTitleResponse.cpp
  OAISetCustomEmojiStickerSetThumbnailRequest.cpp
  OAISetCustomEmojiStickerSetThumbnailResponse.cpp
  OAISetGameScoreRequest.cpp
  OAISetGameScoreResponse.cpp
  OAISetMessageReactionRequest.cpp
  OAISetMessageReactionResponse.cpp
  OAISetMyCommandsRequest.cpp
  OAISetMyCommandsResponse.cpp
  OAISetMyDefaultAdministratorRightsRequest.cpp
  OAISetMyDefaultAdministratorRightsResponse.cpp
  OAISetMyDescriptionRequest.cpp
  OAISetMyDescriptionResponse.cpp
  OAISetMyNameRequest.cpp
  OAISetMyNameResponse.cpp
  OAISetMyShortDescriptionRequest.cpp
  OAISetMyShortDescriptionResponse.cpp
  OAISetPassportDataErrorsRequest.cpp
  OAISetPassportDataErrorsResponse.cpp
  OAISetStickerEmojiListRequest.cpp
  OAISetStickerEmojiListResponse.cpp
  OAISetStickerKeywordsRequest.cpp
  OAISetStickerKeywordsResponse.cpp
  OAISetStickerMaskPositionRequest.cpp
  OAISetStickerMaskPositionResponse.cpp
  OAISetStickerPositionInSetRequest.cpp
  OAISetStickerPositionInSetResponse.cpp
  OAISetStickerSetThumbnailRequest.cpp
  OAISetStickerSetThumbnailResponse.cpp
  OAISetStickerSetTitleRequest.cpp
  OAISetStickerSetTitleResponse.cpp
  OAISetUserEmojiStatusRequest.cpp
  OAISetUserEmojiStatusResponse.cpp
  OAISetWebhookRequest.cpp
  OAISetWebhookResponse.cpp
  OAISharedUser.cpp
  OAIShippingAddress.cpp
  OAIShippingOption.cpp
  OAIShippingQuery.cpp
  OAIStarAmount.cpp
  OAIStarTransaction.cpp
  OAIStarTransactions.cpp
  OAISticker.cpp
  OAIStickerSet.cpp
  OAIStopMessageLiveLocationRequest.cpp
  OAIStopMessageLiveLocationResponse.cpp
  OAIStopPollRequest.cpp
  OAIStopPollResponse.cpp
  OAIStory.cpp
  OAIStoryArea.cpp
  OAIStoryAreaPosition.cpp
  OAIStoryAreaType.cpp
  OAIStoryAreaTypeLink.cpp
  OAIStoryAreaTypeLocation.cpp
  OAIStoryAreaTypeSuggestedReaction.cpp
  OAIStoryAreaTypeUniqueGift.cpp
  OAIStoryAreaTypeWeather.cpp
  OAISuccessfulPayment.cpp
  OAISwitchInlineQueryChosenChat.cpp
  OAITextQuote.cpp
  OAITransactionPartner.cpp
  OAITransactionPartnerAffiliateProgram.cpp
  OAITransactionPartnerChat.cpp
  OAITransactionPartnerFragment.cpp
  OAITransactionPartnerOther.cpp
  OAITransactionPartnerTelegramAds.cpp
  OAITransactionPartnerTelegramApi.cpp
  OAITransactionPartnerUser.cpp
  OAITransferBusinessAccountStarsRequest.cpp
  OAITransferBusinessAccountStarsResponse.cpp
  OAITransferGiftRequest.cpp
  OAITransferGiftResponse.cpp
  OAIUnbanChatMemberRequest.cpp
  OAIUnbanChatMemberResponse.cpp
  OAIUnbanChatSenderChatRequest.cpp
  OAIUnbanChatSenderChatResponse.cpp
  OAIUnhideGeneralForumTopicRequest.cpp
  OAIUnhideGeneralForumTopicResponse.cpp
  OAIUniqueGift.cpp
  OAIUniqueGiftBackdrop.cpp
  OAIUniqueGiftBackdropColors.cpp
  OAIUniqueGiftInfo.cpp
  OAIUniqueGiftModel.cpp
  OAIUniqueGiftSymbol.cpp
  OAIUnpinAllChatMessagesRequest.cpp
  OAIUnpinAllChatMessagesResponse.cpp
  OAIUnpinAllForumTopicMessagesRequest.cpp
  OAIUnpinAllForumTopicMessagesResponse.cpp
  OAIUnpinAllGeneralForumTopicMessagesRequest.cpp
  OAIUnpinAllGeneralForumTopicMessagesResponse.cpp
  OAIUnpinChatMessageRequest.cpp
  OAIUnpinChatMessageResponse.cpp
  OAIUpdate.cpp
  OAIUpgradeGiftRequest.cpp
  OAIUpgradeGiftResponse.cpp
  OAIUploadStickerFileRequest.cpp
  OAIUploadStickerFileResponse.cpp
  OAIUser.cpp
  OAIUserChatBoosts.cpp
  OAIUserProfilePhotos.cpp
  OAIUsersShared.cpp
  OAIVenue.cpp
  OAIVerifyChatRequest.cpp
  OAIVerifyChatResponse.cpp
  OAIVerifyUserRequest.cpp
  OAIVerifyUserResponse.cpp
  OAIVideo.cpp
  OAIVideoChatEnded.cpp
  OAIVideoChatParticipantsInvited.cpp
  OAIVideoChatScheduled.cpp
  OAIVideoNote.cpp
  OAIVoice.cpp
  OAIWebAppData.cpp
  OAIWebAppInfo.cpp
  OAIWebhookInfo.cpp
  OAIWriteAccessAllowed.cpp
  OAIDefaultApi.cpp
  OAIHelpers.cpp
  OAIHttpRequest.cpp
  OAIHttpFileElement.cpp
  OAIOauth.cpp
  )

target_include_directories(${PROJECT_NAME}
    PUBLIC
        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
        $<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

target_link_libraries(${PROJECT_NAME}
    PUBLIC
        Qt${QT_VERSION_MAJOR}::Core
        Qt${QT_VERSION_MAJOR}::Network
        Qt${QT_VERSION_MAJOR}::Gui

)

configure_package_config_file(${CMAKE_CURRENT_SOURCE_DIR}/Config.cmake.in
    "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}"
)

install(
    TARGETS ${PROJECT_NAME}
    EXPORT ${PROJECT_NAME}Targets
    LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    ARCHIVE DESTINATION "${CMAKE_INSTALL_LIBDIR}"
    RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}"
    INCLUDES DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}"
)

install(
    FILES ${HEADER_FILES}
    DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}
)

install(
    FILES "${CMAKE_CURRENT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)

install(
    EXPORT ${PROJECT_NAME}Targets
    DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
)
